--- a/package.json
+++ b/package.json
@@ -21,11 +21,21 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
+    "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.30"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
