--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.4",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-transition-group": "^4.4.3",
     "umi": "^3.5.30"
   },
   "devDependencies": {
