--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.5",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.30",
     "lint-staged": "^10.0.7",
